fix incompabilities when upgrading solution to c++20 define _ITERATOR_DEBUG_LEVEL=0 in UnitTest project to avoid extra iterator (and c++20 incompatible) checks done only in debug

--- a/test/Factory/Factory.vcxproj
+++ b/test/Factory/Factory.vcxproj
@@ -75,7 +75,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG; _SECURE_SCL=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader />
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
